<resources>
        <string name="app_name">WIFI</string>
        <string name="hello_world">Hello world!</string>
        <string name="action_settings">Settings</string>
        <string name="server">服务端</string>
        <string name="client">客户端</string>
        <string name="set">设置</string>
        <string name="start_server">开启服务</string>
        <string name="send">发送</string>
        <string name="send_hint">请输入发送内容</string>
        <string name="server_ip">服务端ip地址</string>
        <string name="port">端口</string>
        <string name="hint_port">8086</string>
        <string name="message_mode">消息格式</string>
        <string name="txt">文本</string>
        <string name="hex">hex</string>
        <string name="send_ontime">定时发送</string>
        <string name="ok">确定</string>
        <string name="cancel">取消</string>
        <string name="hint_time">需要定时发送则填写</string>

        <string name="connect">连接</string>
        <string name="disconnect">断开</string>
        <string name="state">状态</string>
        <string name="state_closed">未开启</string>
        <string name="state_connected">已连接</string>
        <string name="state_disconected">已断开连接</string>
        <string name="state_disconect_accept">已断开连接,等待连接</string>
        <string name="state_connecting">正在连接</string>
        <string name="state_connect_fail">连接失败</string>
        <string name="state_opened">服务已开启，等待连接</string>
    </resources>