<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
	<LinearLayout
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    	<TextView
        	android:layout_width="0dp"
        	android:layout_height="match_parent"
        	android:layout_weight="1"
        	android:gravity="center"
        	android:text="@string/port" 
        	android:textSize="@dimen/dialog_txt_size"/>

    	<EditText
        	android:id="@+id/server_port"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="2"
        	android:inputType="number"
        	android:digits="0123456789"
        	android:ems="10"/>
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_mode"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="@dimen/dialog_txt_size"/>

        <RadioGroup
            android:id="@+id/display_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal" >
            <RadioButton
                android:id="@+id/server_modetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/txt" />
            <RadioButton
                android:id="@+id/server_modehex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hex" />
        </RadioGroup> 
    </LinearLayout>
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/send_ontime" />

        <EditText
            android:id="@+id/server_timeinterval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:digits="0123456789"
            android:ems="10"
            android:hint="@string/hint_time" >
        </EditText>
    </LinearLayout>

    <Button
    	android:id="@+id/server_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />
</LinearLayout>