<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	
    <LinearLayout
	    android:id="@+id/server_lin"
	    android:layout_alignParentTop="true"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    <TextView
		    android:id="@+id/serverState"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="@dimen/layout_top_margin"
		    android:gravity="center"
		    android:text="@string/state"
		    android:textSize="@dimen/title_size" />
	    
	    <LinearLayout 
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_marginTop="@dimen/layout_top_margin"
	        android:layout_marginLeft="@dimen/left_right_margin"
	        android:layout_marginRight="@dimen/left_right_margin"
	        android:orientation="horizontal">
	        <Button
	            android:id="@+id/bt_server_set"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/set" />
	        
	        <Button
	            android:id="@+id/bt_server_start"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/start_server" />
	    </LinearLayout>
	
	     <LinearLayout 
				android:layout_width="match_parent" 		
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/left_right_margin"
	        	android:layout_marginRight="@dimen/left_right_margin"
				android:orientation="horizontal">
	        
	         <EditText
				    android:id="@+id/server_sendMsg"
				    android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="2"
				    android:hint="@string/send_hint" />
	         	   			   
			<Button android:id="@+id/bt_server_send"
					android:layout_width="0dp" 
					android:layout_height="wrap_content" 
					android:layout_weight="1"
					android:text="@string/send"/>
		</LinearLayout>
	</LinearLayout>
	
	<ScrollView
	    android:id="@+id/server_scroll"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@id/server_lin"
	    android:layout_alignParentBottom="true">
		
		<TextView
		    android:id="@+id/server_receive"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="@dimen/left_right_margin"
		    android:layout_marginRight="@dimen/left_right_margin"
		    android:textSize="20sp" />

	</ScrollView>
</RelativeLayout>